--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ logo: # add logo name
 title: Francis Sch. E
 description: IT Mystery Novel # this means to ignore newlines until "baseurl:"
 permalink: ':title/'
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://francissch.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/bef" # the subpath of your site, e.g. /blog
+url: "https://cyfung1031.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
 video: Matterhorn-X.mp4 # add banner video. Add your video file to the folder video
